[gd_scene load_steps=12 format=3 uid="uid://dwkboh4o4rvn0"]

[ext_resource type="Script" uid="uid://reg1wpugdj2a" path="res://scenes/weapons/laserbeam.gd" id="1_825ps"]
[ext_resource type="Texture2D" uid="uid://dwlky44ajarye" path="res://assets/sprites/particles/glowing_circle.png" id="2_lx24t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gankm"]
size = Vector2(7.5, 129)

[sub_resource type="Gradient" id="Gradient_vhsbn"]
offsets = PackedFloat32Array(0.00361011, 0.512635, 0.693141)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_uqnan"]
gradient = SubResource("Gradient_vhsbn")

[sub_resource type="Curve" id="Curve_npq8h"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.498361, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_oqeyj"]
curve = SubResource("Curve_npq8h")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rgc4i"]
particle_flag_disable_z = true
initial_velocity_max = 120.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_oqeyj")
color_initial_ramp = SubResource("GradientTexture1D_uqnan")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_htn0x"]
particle_flag_disable_z = true
initial_velocity_max = 250.0
gravity = Vector3(0, 0, 0)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_pp1gq"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
initial_velocity_max = 200.0
gravity = Vector3(0, 0, 0)
tangential_accel_min = -2.23517e-06
tangential_accel_max = 100.0
attractor_interaction_enabled = false

[sub_resource type="Environment" id="Environment_5kxiy"]
background_mode = 3
glow_enabled = true
glow_levels/1 = 3.0
glow_levels/2 = 3.0
glow_levels/3 = 0.8
glow_levels/4 = 0.3
glow_strength = 1.5
glow_blend_mode = 0

[node name="LaserBeam" type="RayCast2D"]
position = Vector2(239, 201)
target_position = Vector2(1000, 0)
script = ExtResource("1_825ps")

[node name="Line2D" type="Line2D" parent="."]
position = Vector2(0, -1)
points = PackedVector2Array(0, 0, 100, 0)
default_color = Color(0.5, 3, 6, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(744, 0)
shape = SubResource("RectangleShape2D_gankm")

[node name="CastingParticles2D" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_rgc4i")
texture = ExtResource("2_lx24t")
lifetime = 0.3

[node name="CollisionParticles2D" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_htn0x")
texture = ExtResource("2_lx24t")
lifetime = 0.3

[node name="BeamParticles2D" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_pp1gq")
texture = ExtResource("2_lx24t")
draw_order = 0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_5kxiy")
